[tool.poetry]
name = "fakeme"
version = "0.2.2"
description = "Relative Data Generator: generate relative tables data, data generator for multi tables that depend on each other"
authors = ["Iuliia Volkova <xnuinside@gmail.com>"]
homepage = "https://github.com/xnuinside/fakeme"
repository = "https://github.com/xnuinside/fakeme"
license = "MIT"
readme = "docs/README.rst"
classifiers = [
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
    "Topic :: Software Development :: Libraries :: Python Modules"
]


[tool.poetry.dependencies]
python = ">=3.6.2,<4.0"
ply = "^3.11"
pandas = "1.1.5"
mimesis = "^4.0"
pydantic = "^1.8.2"
simple-ddl-parser = "^0.19.1"

[tool.poetry.scripts]
fakeme = 'fakeme.cli:cli'

[tool.poetry.dev-dependencies]
sphinx = "^2.4"
m2r = "^0.2.1"
pytest = "^6.2.4"
pre-commit = "^2.13.0"
twine = "^3.4.1"
flake8 = "^3.9.2"
black = "^21.6b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
